Cleaned code, fixed overflow display bug of ProcessView

--- a/generator_parts/muster.css
+++ b/generator_parts/muster.css
@@ -62,9 +62,9 @@ table tr td {white-space: nowrap;}
 .state2 {background-color: yellow;}
 .state3 {background-color: red;}
 .state4 {background-color: orange;}
-.state5 {background-color: blue;}
+.state5 {background-color: lightblue;}
 .state6 {background-color: khaki;}
-.state7 {background-color: lightblue;}
+.state7 {background-color: steelblue;}
 .state8 {background-color: lightyellow;}
 .state9 {background-color: mediumorchid;}
 .state10 {background-color: tan;}
